# ChartTest

./: BarChart.qml  BarChartWindow.qml  CMakeLists.txt  ColoredImage.qml  DotsWindow.qml  Main.qml  SinusWindow.qml  SphereWindow.qml  ZoomWindow.qml  images.qrc  main.cpp  res.qrc
CustomStyle/: CMakeLists.txt  CustomTabButton.qml  RectangleGradient.qml
CustomStyle/src/: CustomTextField.qml
src/: livesinus.cpp  livesinus.h  sinustable.cpp  sinustable.h
src/qml/: BarChartWindow.qml  DotsWindow.qml  Main.qml  SinusWindow.qml  SphereWindow.qml  ZoomWindow.qml
